syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/yash91989201/superfast-delivery-api/common/pb";

enum AuthRole {
  CUSTOMER = 0;
  DELIVERY_PARTNER = 1;
  VENDOR = 2;
  ADMIN = 3;
}

message Auth {
  string id = 1;
  optional string email = 2;
  bool email_verified = 3;
  optional string phone = 4;
  AuthRole auth_role = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  optional google.protobuf.Timestamp deleted_at = 8;
}

message Session {
  string id = 1;
  string access_token = 2;
  google.protobuf.Timestamp access_token_expires_at = 3;
}

message SignInWithEmailReq {
  string email = 1;
  AuthRole auth_role = 2;
  optional string otp = 3;
}

message SignInWithPhoneReq {
  string phone = 1;
  AuthRole auth_role = 2;
  optional string otp = 3;
}

message SignInWithGoogleReq {
  string id_token = 1;
  AuthRole auth_role = 2;
}

message SignInRes {
  Auth auth = 1;
  Session session = 2;
}

message RefreshTokenReq {
  string session_id = 1;
}

message LogOutReq {
  string session_id = 1;
}

message GetAuthByIdReq {
  string id = 1;
}

message GetAuthReq {
  optional string email = 1;
  optional string phone = 2;
}

message ValidateSessionReq {
  string auth_token = 1;
}

message ValidateSessionRes {
  bool valid = 1;
  Auth auth = 2;
}

service AuthenticationService {
  rpc SignInWithEmail(SignInWithEmailReq) returns (SignInRes) {}
  rpc SignInWithPhone(SignInWithPhoneReq) returns (SignInRes) {}
  rpc SignInWithGoogle(SignInWithGoogleReq) returns (SignInRes) {}

  rpc GetAuthById(GetAuthByIdReq) returns (Auth) {}
  rpc GetAuth(GetAuthReq) returns (Auth) {}

  rpc RefreshToken(RefreshTokenReq) returns (SignInRes) {}
  rpc LogOut(LogOutReq) returns (SignInRes) {}

  rpc ValidateSession(ValidateSessionReq) returns (ValidateSessionRes) {}
}
